force-app/main/default/objects/User_History__c/User_History__c.object-meta.xml
<CustomObject>
    <label>User History</label>
    <nameField>
        <displayFormat>UH-{000000000}</displayFormat>
        <label>User History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>