force-app/main/default/objects/User_History__c/fields/Modified_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Modified_Date_Time__c</fullName>
    <label>Modified Date/Time</label>
    <type>DateTime</type>
</CustomField>