force-app/main/default/objects/User_History__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <inlineHelpText>Specify details on why coins are adjusted</inlineHelpText>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>