force-app/main/default/objects/User_History__c/fields/Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_History</relationshipName>
    <type>Lookup</type>
</CustomField>