force-app/main/default/objects/User_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Field__c</columns>
    <columns>Modified_By__c</columns>
    <columns>Modified_Date_Time__c</columns>
    <columns>Old_Value__c</columns>
    <columns>New_Value__c</columns>
    <columns>Parent_Id__c</columns>
    <columns>Reason__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>